--- a/grocery_app/templates/new_item.html
+++ b/grocery_app/templates/new_item.html
@@ -3,16 +3,20 @@
 
 <h1>New Item</h1>
 
-<form>
+<form method="POST" action="{{url_for('main.new_item')}}">
+    {{ form.csrf_token }}
     <fieldset>
         <legend>Please enter your information:</legend>
-
-
-
-        <!-- TODO: Remove the next paragraph and use the `form` object passed in 
-            from the route to render a form. -->
-        <p><em>Form fields go here!</em></p>
-
+            {{ form.name.label }}
+            {{ form.name }}
+            {{ form.price.label }}
+            {{ form.price }}
+            {{ form.category.label }}
+            {{ form.category }}
+            {{ form.photo_url.label }}
+            {{ form.photo_url }}
+            {{ form.store.label }}
+            {{ form.store }}
         <input type="submit" value="Submit">
     </fieldset>
 </form>
