--- a/grocery_app/templates/item_detail.html
+++ b/grocery_app/templates/item_detail.html
@@ -14,16 +14,19 @@
 
 <h2>Edit Item</h2>
 
-<form>
+<form method="POST" action="{{ url_for('main.item_detail', item_id=item.id) }}">
     <fieldset>
         <legend>Please enter your information:</legend>
-
-
-
-        <!-- TODO: Remove the next paragraph and use the `form` object passed in 
-            from the route to render a form. -->
-        <p><em>Form fields go here!</em></p>
-
+        {{ form.name.label }}
+        {{ form.name }}
+        {{ form.price.label }}
+        {{ form.price }}
+        {{ form.category.label }}
+        {{ form.category }}
+        {{ form.photo_url.label }}
+        {{ form.photo_url }}
+        {{ form.store.label }}
+        {{ form.store }}
         <input type="submit" value="Submit">
     </fieldset>
 </form>
