--- a/grocery_app/templates/new_item.html
+++ b/grocery_app/templates/new_item.html
@@ -17,7 +17,7 @@
             {{ form.photo_url }}
             {{ form.store.label }}
             {{ form.store }}
-        <input type="submit" value="Submit">
+            {{ form.submit }}
     </fieldset>
 </form>
 
