--- a/grocery_app/templates/base.html
+++ b/grocery_app/templates/base.html
@@ -16,8 +16,18 @@
                 <div>
                     <a href="/new_store">New Store</a>
                     <a href="/new_item">New Item</a>
+                    {% if current_user.is_authenticated %}
+                        <a href="/shopping_list">Shopping List</a>
+                        <a href="/logout">Log Out</a>
+                    {% else %}
+                        <a href="/signup">Sign Up</a>
+                        <a href="/login">Log In</a>
+                    {% endif %}
                 </div>
             </nav>
+            {% if current_user.is_authenticated %}
+                <p>Logged in as: {{ current_user.username }}</p>
+            {% endif %}
             {% block content %}{% endblock %}
         </div>
     </body>
