--- a/grocery_app/templates/item_detail.html
+++ b/grocery_app/templates/item_detail.html
@@ -15,18 +15,19 @@
 <h2>Edit Item</h2>
 
 <form method="POST" action="{{ url_for('main.item_detail', item_id=item.id) }}">
+    {{ form.csrf_token }}
     <fieldset>
         <legend>Please enter your information:</legend>
-        {{ form.name.label }}
-        {{ form.name }}
-        {{ form.price.label }}
-        {{ form.price }}
-        {{ form.category.label }}
-        {{ form.category }}
-        {{ form.photo_url.label }}
-        {{ form.photo_url }}
-        {{ form.store.label }}
-        {{ form.store }}
+            {{ form.name.label }}
+            {{ form.name }}
+            {{ form.price.label }}
+            {{ form.price }}
+            {{ form.category.label }}
+            {{ form.category }}
+            {{ form.photo_url.label }}
+            {{ form.photo_url }}
+            {{ form.store.label }}
+            {{ form.store }}
         <input type="submit" value="Submit">
     </fieldset>
 </form>
