--- a/grocery_app/templates/base.html
+++ b/grocery_app/templates/base.html
@@ -11,7 +11,7 @@
             {% for message in get_flashed_messages() %}
                 <p>{{ message }}</p>
             {% endfor %}
-            <nav>
+            <nav id="home">
                 <a href="/">Home</a>
                 <div>
                     <a href="/new_store">New Store</a>
