--- a/grocery_app/static/style.css
+++ b/grocery_app/static/style.css
@@ -4,6 +4,7 @@ body {
     align-items: center;
     background-color: #eee;
     font-family: 'Open Sans', sans-serif;
+    min-height: 100vh;
 }
 
 #content {
@@ -13,11 +14,12 @@ body {
 }
 
 nav {
-    width: 100%;
+    min-width: 100vw;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
+
 
 nav a {
     color: navy;
